--- a/pom.xml
+++ b/pom.xml
@@ -14,10 +14,16 @@
     <slf4j.version>1.7.24</slf4j.version>
     <logback.version>1.2.1</logback.version>
     <mysql.version>5.1.41</mysql.version>
+    <apacheCommonsConfiguration.version>2.0</apacheCommonsConfiguration.version>
+    <apacheCommonsBeanutils.version>1.9.3</apacheCommonsBeanutils.version>
+    <junit.version>4.10</junit.version>
+    <mockito.version>2.7.17</mockito.version>
+    <dbunit.version>2.4.9</dbunit.version>
   </properties>
 
   <dependencies>
 <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
+    
     <dependency>
     	<groupId>mysql</groupId>
     	<artifactId>mysql-connector-java</artifactId>
@@ -42,26 +48,41 @@
   		<artifactId>logback-core</artifactId>
    		<version>${logback.version}</version>
     </dependency>
-    <!-- https://mvnrepository.com/artifact/commons-configuration/commons-configuration -->
+    
     <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-configuration2 -->
 	<dependency>
     	<groupId>org.apache.commons</groupId>
     	<artifactId>commons-configuration2</artifactId>
-    	<version>2.0</version>
+    	<version>${apacheCommonsConfiguration.version}</version>
 	</dependency>
 	
 	<dependency>
 	  <groupId>commons-beanutils</groupId>
 	  <artifactId>commons-beanutils</artifactId>
-	  <version>1.9.3</version>
+	  <version>${apacheCommonsBeanutils.version}</version>
 	</dependency>
 
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>4.10</version>
+      <version>${junit.version}</version>
       <scope>test</scope>
     </dependency>
+    
+    <dependency>
+  	  <groupId>org.mockito</groupId>
+ 	  <artifactId>mockito-android</artifactId>
+  	  <version>${mockito.version}</version>
+      <scope>test</scope>
+	</dependency>
+	
+	<!-- https://mvnrepository.com/artifact/org.dbunit/dbunit -->
+	<dependency>
+      <groupId>org.dbunit</groupId>
+      <artifactId>dbunit</artifactId>
+      <version>${dbunit.version}</version>
+	</dependency>
+	
   </dependencies>
   
   <!-- build>
