--- a/pom.xml
+++ b/pom.xml
@@ -81,6 +81,7 @@
       <groupId>org.dbunit</groupId>
       <artifactId>dbunit</artifactId>
       <version>${dbunit.version}</version>
+      <scope>test</scope>
 	</dependency>
 	
   </dependencies>
