--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
     <junit.version>4.10</junit.version>
     <mockito.version>2.7.17</mockito.version>
     <dbunit.version>2.4.9</dbunit.version>
+    <powermock.version>1.7.0RC4</powermock.version>
   </properties>
 
   <dependencies>
@@ -71,7 +72,7 @@
     
     <dependency>
   	  <groupId>org.mockito</groupId>
- 	  <artifactId>mockito-android</artifactId>
+ 	  <artifactId>mockito-core</artifactId>
   	  <version>${mockito.version}</version>
       <scope>test</scope>
 	</dependency>
@@ -83,6 +84,23 @@
       <version>${dbunit.version}</version>
       <scope>test</scope>
 	</dependency>
+	
+	<!-- https://mvnrepository.com/artifact/org.powermock/powermock-api-mockito2 -->
+	<dependency>
+      <groupId>org.powermock</groupId>
+      <artifactId>powermock-api-mockito2</artifactId>
+      <version>${powermock.version}</version>
+      <scope>test</scope>
+	</dependency>
+	
+	<!-- https://mvnrepository.com/artifact/org.powermock/powermock-module-junit4 -->
+	<dependency>
+      <groupId>org.powermock</groupId>
+      <artifactId>powermock-module-junit4</artifactId>
+      <version>${powermock.version}</version>
+      <scope>test</scope>
+	</dependency>
+	
 	
   </dependencies>
   
