--- a/pom.xml
+++ b/pom.xml
@@ -104,12 +104,12 @@
 	
   </dependencies>
   
-  <!-- build>
-  <plugins-->
+  <build>
+  <plugins>
 <!-- packaging de l'application -->
-    <!--plugin-->
+    <plugin>
         <!-- NOTE: We don't need a groupId specification because the group is org.apache.maven.plugins ...which is assumed by default. -->
-        <!--artifactId>maven-assembly-plugin</artifactId>
+        <artifactId>maven-assembly-plugin</artifactId>
         <version>2.3</version>
         <configuration>
               <descriptors>
@@ -132,6 +132,6 @@
         </executions>
      </plugin>
 </plugins>
-</build-->
+</build>
 </project>
 
