--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
   <groupId>com.excilys.mlemaile.cdb</groupId>
   <artifactId>ComputerDatabase</artifactId>
   <version>1.0-SNAPSHOT</version>
-  <packaging>jar</packaging>
+  <packaging>war</packaging>
   <name>Computer Database</name>
   
   <properties>
@@ -104,11 +104,13 @@
 	
   </dependencies>
   
-  <build>
+<!-- to generate an executable jar file -->
+<!--   
+<build>
   <plugins>
-<!-- packaging de l'application -->
+packaging de l'application
     <plugin>
-        <!-- NOTE: We don't need a groupId specification because the group is org.apache.maven.plugins ...which is assumed by default. -->
+        NOTE: We don't need a groupId specification because the group is org.apache.maven.plugins ...which is assumed by default.
         <artifactId>maven-assembly-plugin</artifactId>
         <version>2.3</version>
         <configuration>
@@ -132,6 +134,19 @@
         </executions>
      </plugin>
 </plugins>
+</build> -->
+
+<build>
+    <plugins>
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-war-plugin</artifactId>
+            <version>2.6</version>
+            <configuration>
+                <failOnMissingWebXml>false</failOnMissingWebXml>
+            </configuration>
+        </plugin>
+    </plugins>
 </build>
 </project>
 
