--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
  
   <groupId>com.excilys.mlemaile.cdb</groupId>
   <artifactId>ComputerDatabase</artifactId>
-  <version>1.0-SNAPSHOT</version>
+  <version>1.1-SNAPSHOT</version>
   <packaging>war</packaging>
   <name>Computer Database</name>
   
@@ -20,6 +20,7 @@
     <mockito.version>2.7.17</mockito.version>
     <dbunit.version>2.4.9</dbunit.version>
     <powermock.version>1.7.0RC4</powermock.version>
+    <servlet.version>3.0.1</servlet.version>
   </properties>
 
   <dependencies>
@@ -101,6 +102,11 @@
       <scope>test</scope>
 	</dependency>
 	
+	<dependency>
+	   <groupId>javax.servlet</groupId>
+	   <artifactId>javax.servlet-api</artifactId>
+	   <version>${servlet.version}</version>
+	</dependency>
 	
   </dependencies>
   
@@ -146,7 +152,45 @@ packaging de l'application
                 <failOnMissingWebXml>false</failOnMissingWebXml>
             </configuration>
         </plugin>
+        
+        <plugin>
+   <groupId>org.apache.maven.plugins</groupId>
+   <artifactId>maven-checkstyle-plugin</artifactId>
+   <version>2.17</version>
+
+     	<goals>
+         <goal>check</goal>
+       </goals>
+       
+       <configuration>
+         <configLocation>checkstyle.xml</configLocation>
+         <encoding>UTF-8</encoding>
+         <consoleOutput>true</consoleOutput>
+         <failsOnError>false</failsOnError>
+         <linkXRef>false</linkXRef>
+       </configuration>
+
+ </plugin>
     </plugins>
+    
+    
 </build>
+
+<reporting>
+      <plugins>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-checkstyle-plugin</artifactId>
+          <version>2.17</version>
+          <reportSets>
+            <reportSet>
+              <reports>
+                <report>checkstyle</report>
+              </reports>
+            </reportSet>
+          </reportSets>
+        </plugin>
+      </plugins>
+    </reporting>
 </project>
 
