--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
     <dbunit.version>2.4.9</dbunit.version>
     <powermock.version>1.7.0RC4</powermock.version>
     <servlet.version>3.0.1</servlet.version>
+    <jspapi.version>2.3.1</jspapi.version>
   </properties>
 
   <dependencies>
@@ -106,7 +107,24 @@
 	   <groupId>javax.servlet</groupId>
 	   <artifactId>javax.servlet-api</artifactId>
 	   <version>${servlet.version}</version>
+	   <scope>provided</scope>
 	</dependency>
+	
+	<!-- https://mvnrepository.com/artifact/javax.servlet.jsp/javax.servlet.jsp-api -->
+	<dependency>
+	    <groupId>javax.servlet.jsp</groupId>
+	    <artifactId>javax.servlet.jsp-api</artifactId>
+	    <version>${jspapi.version}</version>
+	    <scope>provided</scope>
+	</dependency>
+	
+	<!-- https://mvnrepository.com/artifact/javax.servlet/jstl -->
+	<dependency>
+	    <groupId>javax.servlet</groupId>
+	    <artifactId>jstl</artifactId>
+	    <version>1.2</version>
+	</dependency>
+	
 	
   </dependencies>
   
@@ -182,6 +200,11 @@ packaging de l'application
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-checkstyle-plugin</artifactId>
           <version>2.17</version>
+          <configuration>
+          <configLocation>checkstyle.xml</configLocation>
+          <suppressionsLocation>suppressions.xml</suppressionsLocation>
+          <suppressionsFileExpression>checkstyle.suppressions.file</suppressionsFileExpression>
+        </configuration>
           <reportSets>
             <reportSet>
               <reports>
