--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
  
   <groupId>com.excilys.mlemaile.cdb</groupId>
   <artifactId>ComputerDatabase</artifactId>
-  <version>1.3-SNAPSHOT</version>
+  <version>1.3-RELEASE</version>
   <name>Computer Database</name>
   <packaging>war</packaging>
   
