--- a/pom.xml
+++ b/pom.xml
@@ -1,219 +1,206 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
- 
-  <groupId>com.excilys.mlemaile.cdb</groupId>
-  <artifactId>ComputerDatabase</artifactId>
-  <version>1.3-RELEASE</version>
-  <name>Computer Database</name>
-  <packaging>war</packaging>
-  
-  <properties>
-    <maven.compiler.source>1.8</maven.compiler.source>
-    <maven.compiler.target>1.8</maven.compiler.target>
-    <slf4j.version>1.7.24</slf4j.version>
-    <logback.version>1.2.1</logback.version>
-    <mysql.version>5.1.41</mysql.version>
-    <apacheCommonsConfiguration.version>2.0</apacheCommonsConfiguration.version>
-    <apacheCommonsBeanutils.version>1.9.3</apacheCommonsBeanutils.version>
-    <junit.version>4.10</junit.version>
-    <mockito.version>2.7.17</mockito.version>
-    <dbunit.version>2.4.9</dbunit.version>
-    <powermock.version>1.7.0RC4</powermock.version>
-    <servlet.version>3.0.1</servlet.version>
-    <jspapi.version>2.3.1</jspapi.version>
-  </properties>
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
 
-  <dependencies>
-<!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
-    
-    <dependency>
-    	<groupId>mysql</groupId>
-    	<artifactId>mysql-connector-java</artifactId>
-    	<version>${mysql.version}</version>
-		<scope>runtime</scope>
-    </dependency>
+	<groupId>com.excilys.mlemaile.cdb</groupId>
+	<artifactId>ComputerDatabase</artifactId>
+	<version>1.3-RELEASE</version>
+	<name>Computer Database</name>
+	<packaging>war</packaging>
 
-    <dependency>
-  		<groupId>org.slf4j</groupId>
-  		<artifactId>slf4j-api</artifactId>
-  		<version>${slf4j.version}</version>
-    </dependency>
+	<properties>
+		<maven.compiler.source>1.8</maven.compiler.source>
+		<maven.compiler.target>1.8</maven.compiler.target>
+		<slf4j.version>1.7.24</slf4j.version>
+		<logback.version>1.2.1</logback.version>
+		<mysql.version>5.1.41</mysql.version>
+		<apacheCommonsConfiguration.version>2.0</apacheCommonsConfiguration.version>
+		<apacheCommonsBeanutils.version>1.9.3</apacheCommonsBeanutils.version>
+		<junit.version>4.10</junit.version>
+		<mockito.version>2.7.17</mockito.version>
+		<dbunit.version>2.4.9</dbunit.version>
+		<powermock.version>1.7.0RC4</powermock.version>
+		<servlet.version>3.0.1</servlet.version>
+		<jspapi.version>2.3.1</jspapi.version>
+		<jstl.version>1.2</jstl.version>
+		<selenium.version>3.3.1</selenium.version>
+	</properties>
 
-    <dependency>
-  		<groupId>ch.qos.logback</groupId>
-  		<artifactId>logback-classic</artifactId>
-  		<version>${logback.version}</version>
-    </dependency>
+	<dependencies>
+		<!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
 
-    <dependency>
-  		<groupId>ch.qos.logback</groupId>
-  		<artifactId>logback-core</artifactId>
-   		<version>${logback.version}</version>
-    </dependency>
-    
-    <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-configuration2 -->
-	<dependency>
-    	<groupId>org.apache.commons</groupId>
-    	<artifactId>commons-configuration2</artifactId>
-    	<version>${apacheCommonsConfiguration.version}</version>
-	</dependency>
-	
-	<dependency>
-	  <groupId>commons-beanutils</groupId>
-	  <artifactId>commons-beanutils</artifactId>
-	  <version>${apacheCommonsBeanutils.version}</version>
-	</dependency>
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>${mysql.version}</version>
+			<scope>runtime</scope>
+		</dependency>
 
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>${junit.version}</version>
-      <scope>test</scope>
-    </dependency>
-    
-    <dependency>
-  	  <groupId>org.mockito</groupId>
- 	  <artifactId>mockito-core</artifactId>
-  	  <version>${mockito.version}</version>
-      <scope>test</scope>
-	</dependency>
-	
-	<!-- https://mvnrepository.com/artifact/org.dbunit/dbunit -->
-	<dependency>
-      <groupId>org.dbunit</groupId>
-      <artifactId>dbunit</artifactId>
-      <version>${dbunit.version}</version>
-      <scope>test</scope>
-	</dependency>
-	
-	<!-- https://mvnrepository.com/artifact/org.powermock/powermock-api-mockito2 -->
-	<dependency>
-      <groupId>org.powermock</groupId>
-      <artifactId>powermock-api-mockito2</artifactId>
-      <version>${powermock.version}</version>
-      <scope>test</scope>
-	</dependency>
-	
-	<!-- https://mvnrepository.com/artifact/org.powermock/powermock-module-junit4 -->
-	<dependency>
-      <groupId>org.powermock</groupId>
-      <artifactId>powermock-module-junit4</artifactId>
-      <version>${powermock.version}</version>
-      <scope>test</scope>
-	</dependency>
-	
-	<dependency>
-	   <groupId>javax.servlet</groupId>
-	   <artifactId>javax.servlet-api</artifactId>
-	   <version>${servlet.version}</version>
-	   <scope>provided</scope>
-	</dependency>
-	
-	<!-- https://mvnrepository.com/artifact/javax.servlet.jsp/javax.servlet.jsp-api -->
-	<dependency>
-	    <groupId>javax.servlet.jsp</groupId>
-	    <artifactId>javax.servlet.jsp-api</artifactId>
-	    <version>${jspapi.version}</version>
-	    <scope>provided</scope>
-	</dependency>
-	
-	<!-- https://mvnrepository.com/artifact/javax.servlet/jstl -->
-	<dependency>
-	    <groupId>javax.servlet</groupId>
-	    <artifactId>jstl</artifactId>
-	    <version>1.2</version>
-	</dependency>
-	
-	
-  </dependencies>
-  
-<!-- to generate an executable jar file -->
-<!--   
-<build>
-  <plugins>
-packaging de l'application
-    <plugin>
-        NOTE: We don't need a groupId specification because the group is org.apache.maven.plugins ...which is assumed by default.
-        <artifactId>maven-assembly-plugin</artifactId>
-        <version>2.3</version>
-        <configuration>
-              <descriptors>
-<descriptor>src/main/jar.xml</descriptor>
-              </descriptors>
-              <archive>
-                   <manifest>
-                        <mainClass>com.excilys.mlemaile.cdb.MainClass</mainClass>
-                   </manifest>
-              </archive>
-        </configuration>
-        <executions>
-              <execution>
-                   <id>executable</id>
-                   <phase>package</phase>
-                   <goals>
-                        <goal>single</goal>
-                   </goals>
-             </execution>
-        </executions>
-     </plugin>
-</plugins>
-</build> -->
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+			<version>${slf4j.version}</version>
+		</dependency>
 
-<build>
-    <plugins>
-        <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-war-plugin</artifactId>
-            <version>2.6</version>
-            <configuration>
-                <failOnMissingWebXml>false</failOnMissingWebXml>
-            </configuration>
-        </plugin>
-        
-        <plugin>
-   <groupId>org.apache.maven.plugins</groupId>
-   <artifactId>maven-checkstyle-plugin</artifactId>
-   <version>2.17</version>
+		<dependency>
+			<groupId>ch.qos.logback</groupId>
+			<artifactId>logback-classic</artifactId>
+			<version>${logback.version}</version>
+		</dependency>
 
-     	<goals>
-         <goal>check</goal>
-       </goals>
-       
-       <configuration>
-         <configLocation>checkstyle.xml</configLocation>
-         <encoding>UTF-8</encoding>
-         <consoleOutput>true</consoleOutput>
-         <failsOnError>false</failsOnError>
-         <linkXRef>false</linkXRef>
-       </configuration>
+		<dependency>
+			<groupId>ch.qos.logback</groupId>
+			<artifactId>logback-core</artifactId>
+			<version>${logback.version}</version>
+		</dependency>
 
- </plugin>
-    </plugins>
-    
-    
-</build>
+		<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-configuration2 -->
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-configuration2</artifactId>
+			<version>${apacheCommonsConfiguration.version}</version>
+		</dependency>
 
-<reporting>
-      <plugins>
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-checkstyle-plugin</artifactId>
-          <version>2.17</version>
-          <configuration>
-          <configLocation>checkstyle.xml</configLocation>
-          <suppressionsLocation>suppressions.xml</suppressionsLocation>
-          <suppressionsFileExpression>checkstyle.suppressions.file</suppressionsFileExpression>
-        </configuration>
-          <reportSets>
-            <reportSet>
-              <reports>
-                <report>checkstyle</report>
-              </reports>
-            </reportSet>
-          </reportSets>
-        </plugin>
-      </plugins>
-    </reporting>
+		<dependency>
+			<groupId>commons-beanutils</groupId>
+			<artifactId>commons-beanutils</artifactId>
+			<version>${apacheCommonsBeanutils.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>${junit.version}</version>
+			<scope>test</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-core</artifactId>
+			<version>${mockito.version}</version>
+			<scope>test</scope>
+		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/org.dbunit/dbunit -->
+		<dependency>
+			<groupId>org.dbunit</groupId>
+			<artifactId>dbunit</artifactId>
+			<version>${dbunit.version}</version>
+			<scope>test</scope>
+		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/org.powermock/powermock-api-mockito2 -->
+		<dependency>
+			<groupId>org.powermock</groupId>
+			<artifactId>powermock-api-mockito2</artifactId>
+			<version>${powermock.version}</version>
+			<scope>test</scope>
+		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/org.powermock/powermock-module-junit4 -->
+		<dependency>
+			<groupId>org.powermock</groupId>
+			<artifactId>powermock-module-junit4</artifactId>
+			<version>${powermock.version}</version>
+			<scope>test</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>javax.servlet-api</artifactId>
+			<version>${servlet.version}</version>
+			<scope>provided</scope>
+		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/javax.servlet.jsp/javax.servlet.jsp-api -->
+		<dependency>
+			<groupId>javax.servlet.jsp</groupId>
+			<artifactId>javax.servlet.jsp-api</artifactId>
+			<version>${jspapi.version}</version>
+			<scope>provided</scope>
+		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/javax.servlet/jstl -->
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>jstl</artifactId>
+			<version>${jstl.version}</version>
+		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
+		<dependency>
+			<groupId>org.seleniumhq.selenium</groupId>
+			<artifactId>selenium-java</artifactId>
+			<version>${selenium.version}</version>
+		</dependency>
+
+
+	</dependencies>
+
+	<!-- to generate an executable jar file -->
+	<!-- <build> <plugins> packaging de l'application <plugin> NOTE: We don't 
+		need a groupId specification because the group is org.apache.maven.plugins 
+		...which is assumed by default. <artifactId>maven-assembly-plugin</artifactId> 
+		<version>2.3</version> <configuration> <descriptors> <descriptor>src/main/jar.xml</descriptor> 
+		</descriptors> <archive> <manifest> <mainClass>com.excilys.mlemaile.cdb.MainClass</mainClass> 
+		</manifest> </archive> </configuration> <executions> <execution> <id>executable</id> 
+		<phase>package</phase> <goals> <goal>single</goal> </goals> </execution> 
+		</executions> </plugin> </plugins> </build> -->
+
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-war-plugin</artifactId>
+				<version>2.6</version>
+				<configuration>
+					<failOnMissingWebXml>false</failOnMissingWebXml>
+				</configuration>
+			</plugin>
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-checkstyle-plugin</artifactId>
+				<version>2.17</version>
+
+				<goals>
+					<goal>check</goal>
+				</goals>
+
+				<configuration>
+					<configLocation>checkstyle.xml</configLocation>
+					<encoding>UTF-8</encoding>
+					<consoleOutput>true</consoleOutput>
+					<failsOnError>false</failsOnError>
+					<linkXRef>false</linkXRef>
+				</configuration>
+
+			</plugin>
+		</plugins>
+
+
+	</build>
+
+	<reporting>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-checkstyle-plugin</artifactId>
+				<version>2.17</version>
+				<configuration>
+					<configLocation>checkstyle.xml</configLocation>
+					<suppressionsLocation>suppressions.xml</suppressionsLocation>
+					<suppressionsFileExpression>checkstyle.suppressions.file</suppressionsFileExpression>
+				</configuration>
+				<reportSets>
+					<reportSet>
+						<reports>
+							<report>checkstyle</report>
+						</reports>
+					</reportSet>
+				</reportSets>
+			</plugin>
+		</plugins>
+	</reporting>
 </project>
 
