--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
 	<groupId>com.excilys.mlemaile.cdb</groupId>
 	<artifactId>ComputerDatabase</artifactId>
-	<version>1.3-RELEASE</version>
+	<version>1.4-SNAPSHOT</version>
 	<name>Computer Database</name>
 	<packaging>war</packaging>
 
@@ -132,6 +132,7 @@
 			<groupId>org.seleniumhq.selenium</groupId>
 			<artifactId>selenium-java</artifactId>
 			<version>${selenium.version}</version>
+			<scope>test</scope>
 		</dependency>
 
 
