--- a/src/test/resources/hikari.properties
+++ b/src/test/resources/hikari.properties
@@ -1,4 +1,4 @@
-dataSourceClassName=org.mariadb.jdbc.MySQLDataSource
+dataSourceClassName=com.mysql.jdbc.jdbc2.optional.MysqlDataSource
 dataSource.url=jdbc:mysql://localhost/computer-database-db-test?zeroDateTimeBehavior=convertToNull&password=cdbtesteur
 dataSource.user=testcdb
 maximumPoolSize = 2
