--- a/src/main/resources/hikari.properties
+++ b/src/main/resources/hikari.properties
@@ -1,5 +1,5 @@
-dataSourceClassName=org.mariadb.jdbc.MySQLDataSource
+dataSourceClassName=com.mysql.jdbc.jdbc2.optional.MysqlDataSource
 dataSource.url=jdbc:mysql://localhost/computer-database-db?zeroDateTimeBehavior=convertToNull&password=TJeWkg5equo1mpOIWVUI
 dataSource.user=admincdb
 maximumPoolSize = 2
-leakDetectionThreshold=300
+leakDetectionThreshold=2010
