--- a/src/main/resources/hikari.properties
+++ b/src/main/resources/hikari.properties
@@ -1,5 +1,9 @@
 dataSourceClassName=com.mysql.jdbc.jdbc2.optional.MysqlDataSource
 dataSource.url=jdbc:mysql://localhost/computer-database-db?zeroDateTimeBehavior=convertToNull&password=TJeWkg5equo1mpOIWVUI
+#dataSource.url=jdbc:mysql://localhost/computer-database-db2?zeroDateTimeBehavior=convertToNull&password=1234
 dataSource.user=admincdb
-maximumPoolSize = 2
-leakDetectionThreshold=2010
+#dataSource.user=admincdb2
+dataSource.prepStmtCacheSize=750
+dataSource.prepStmtCacheSqlLimit=8192
+maximumPoolSize = 50
+leakDetectionThreshold=4000
