changement pour les db dans container

--- a/src/main/resources/hikari.properties
+++ b/src/main/resources/hikari.properties
@@ -1,9 +1,13 @@
 dataSourceClassName=com.mysql.jdbc.jdbc2.optional.MysqlDataSource
-dataSource.url=jdbc:mysql://localhost/computer-database-db?zeroDateTimeBehavior=convertToNull&password=TJeWkg5equo1mpOIWVUI
+#own db
+#dataSource.url=jdbc:mysql://localhost/computer-database-db?zeroDateTimeBehavior=convertToNull&password=TJeWkg5equo1mpOIWVUI
+#docker-db
+dataSource.url=jdbc:mysql://172.18.0.2/computer-database-db?zeroDateTimeBehavior=convertToNull&password=qwerty1234
+#own db over 1M
 #dataSource.url=jdbc:mysql://localhost/computer-database-db2?zeroDateTimeBehavior=convertToNull&password=1234
 dataSource.user=admincdb
 #dataSource.user=admincdb2
 dataSource.prepStmtCacheSize=750
 dataSource.prepStmtCacheSqlLimit=8192
-maximumPoolSize = 50
+maximumPoolSize = 60
 leakDetectionThreshold=4000
