properties pour db unit et container de test

--- a/src/test/resources/database.properties
+++ b/src/test/resources/database.properties
@@ -1,6 +1,13 @@
 start-url=jdbc:mysql://
-host=localhost
-database=computer-database-db-test
-user=testcdb
-password=cdbtesteur
 zeroDateTimeBehavior=convertToNull
+#local db test
+#host=localhost
+#database=computer-database-db-test
+#user=testcdb
+#password=cdbtesteur
+
+#container
+host=172.18.0.3
+database=computer-database-db-test
+user=admincdb
+password=qwerty1234
