--- a/src/test/resources/hikari.properties
+++ b/src/test/resources/hikari.properties
@@ -1,8 +1,8 @@
 dataSourceClassName=com.mysql.jdbc.jdbc2.optional.MysqlDataSource
 # local test
 #dataSource.url=jdbc:mysql://localhost/computer-database-db-test?zeroDateTimeBehavior=convertToNull&password=cdbtesteur
-#docker-db
-dataSource.url=jdbc:mysql://172.18.0.2/computer-database-db?zeroDateTimeBehavior=convertToNull&password=qwerty1234
+#docker-db test
+dataSource.url=jdbc:mysql://172.18.0.3/computer-database-db-test?zeroDateTimeBehavior=convertToNull&password=qwerty1234
 dataSource.user=admincdb
 maximumPoolSize = 2
 leakDetectionThreshold=3000
