--- a/pom.xml
+++ b/pom.xml
@@ -125,6 +125,8 @@
 			<version>${selenium.version}</version>
 			<scope>test</scope>
 		</dependency>
+		
+		
 
 		<dependency>
 			<groupId>javax.servlet</groupId>
@@ -152,7 +154,9 @@
 	<build>
 		<plugins>
 			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
+				<groupId>orgMost systems will allow you to have a virtual GUI. You mentioned Ubuntu, which is a Debian derivative. There are several tutorials on the Net that tell you how to install Xvfb, most of which are incomplete or wrong. On a Debian you install a headless browser like this:
+
+				.apache.maven.plugins</groupId>
 				<artifactId>maven-war-plugin</artifactId>
 				<version>2.6</version>
 				<configuration>
@@ -179,7 +183,7 @@
 
 			</plugin>
 
-			<!-- Tomcat plugin To redeploy : mvn tomcat7:redeploy ( -Dmaven.test.skip=true)-->
+			<!-- Tomcat plugin To redeploy : mvn tomcat7:redeploy ( -Dmaven.test.skip=true) -->
 			<plugin>
 				<groupId>org.apache.tomcat.maven</groupId>
 				<artifactId>tomcat7-maven-plugin</artifactId>
