--- a/pom.xml
+++ b/pom.xml
@@ -189,10 +189,10 @@
 				<artifactId>tomcat7-maven-plugin</artifactId>
 				<version>2.2</version>
 				<configuration>
-					<url>http://localhost:8080/manager/text</url>
+					<url>http://172.18.0.3:8080/manager/text</url>
 					<server>Tomcat8Server</server>
-					<username>admin</username>
-					<password>manager</password>
+					<username>deployer</username>
+					<password>deployer</password>
 				</configuration>
 			</plugin>
 		</plugins>
