--- a/dockerbuild/tomcat/Dockerfile
+++ b/dockerbuild/tomcat/Dockerfile
@@ -2,4 +2,4 @@ FROM tomcat:8.5-jre8
 
 ADD tomcat-users.xml /usr/local/tomcat/conf/tomcat-users.xml
 
-#docker run -d --name=tomcat --net=prod-network --ip=172.18.0.3 -p 8281:8080 tomcat
+#docker run -d --name=tomcat --net=prod-network --ip=172.18.0.3 -p 8281:8080 -v prod:/usr/local/tomcat/webapps tomcat
