Essai de connexion db test

--- a/src/test/resources/hikari.properties
+++ b/src/test/resources/hikari.properties
@@ -2,7 +2,7 @@ dataSourceClassName=com.mysql.jdbc.jdbc2.optional.MysqlDataSource
 # local test
 #dataSource.url=jdbc:mysql://localhost/computer-database-db-test?zeroDateTimeBehavior=convertToNull&password=cdbtesteur
 #docker-db test
-dataSource.url=jdbc:mysql://172.19.0.2/computer-database-db-test?zeroDateTimeBehavior=convertToNull&password=qwerty1234
+dataSource.url=jdbc:mysql://ec2-34-209-208-206.us-west-2.compute.amazonaws.com:3307/computer-database-db-test?zeroDateTimeBehavior=convertToNull&password=qwerty1234
 dataSource.user=admincdb
 maximumPoolSize = 2
 leakDetectionThreshold=3000
