Correctif connexion dbunit to db-test

--- a/src/test/resources/database.properties
+++ b/src/test/resources/database.properties
@@ -7,7 +7,7 @@ zeroDateTimeBehavior=convertToNull
 #password=cdbtesteur
 
 #container
-host=ec2-34-209-208-206.us-west-2.compute.amazonaws.com:3307/
+host=ec2-34-209-208-206.us-west-2.compute.amazonaws.com:3307
 database=computer-database-db-test
 user=admincdb
 password=qwerty1234
