--- a/src/main/resources/hikari.properties
+++ b/src/main/resources/hikari.properties
@@ -2,7 +2,7 @@ dataSourceClassName=com.mysql.jdbc.jdbc2.optional.MysqlDataSource
 #own db
 #dataSource.url=jdbc:mysql://localhost/computer-database-db?zeroDateTimeBehavior=convertToNull&password=TJeWkg5equo1mpOIWVUI
 #docker-db
-dataSource.url=jdbc:mysql://172.18.0.2/computer-database-db?zeroDateTimeBehavior=convertToNull&password=qwerty1234
+dataSource.url=jdbc:mysql://ec2-34-209-208-206.us-west-2.compute.amazonaws.com:3306/computer-database-db?zeroDateTimeBehavior=convertToNull&password=qwerty1234
 #own db over 1M
 #dataSource.url=jdbc:mysql://localhost/computer-database-db2?zeroDateTimeBehavior=convertToNull&password=1234
 dataSource.user=admincdb
