Passage en db could en prévision push on master

--- a/src/main/resources/hikari.properties
+++ b/src/main/resources/hikari.properties
@@ -4,10 +4,10 @@ dataSource.user=admincdb
 #dataSource.url=jdbc:mysql://localhost/computer-database-db?zeroDateTimeBehavior=convertToNull&password=TJeWkg5equo1mpOIWVUI
 
 #local container
-dataSource.url=dbc:mysql://172.18.0.2/computer-database-db?zeroDateTimeBehavior=convertToNull&password=qwerty1234
+#dataSource.url=dbc:mysql://172.18.0.2/computer-database-db?zeroDateTimeBehavior=convertToNull&password=qwerty1234
 
 #docker-db
-#dataSource.url=dbc:mysql://ec2-52-27-135-90.us-west-2.compute.amazonaws.com:3306/computer-database-db?zeroDateTimeBehavior=convertToNull&password=qwerty1234
+dataSource.url=dbc:mysql://ec2-52-27-135-90.us-west-2.compute.amazonaws.com:3306/computer-database-db?zeroDateTimeBehavior=convertToNull&password=qwerty1234
 
 #local over 1M
 #dataSource.url=jdbc:mysql://localhost/computer-database-db2?zeroDateTimeBehavior=convertToNull&password=1234
