--- a/src/test/resources/database.properties
+++ b/src/test/resources/database.properties
@@ -7,13 +7,13 @@ zeroDateTimeBehavior=convertToNull
 #password=cdbtesteur
 
 #cloud
-#host=ec2-52-27-135-90.us-west-2.compute.amazonaws.com:3307
-#database=computer-database-db-test
-#user=admincdb
-#password=qwerty1234
-
-#container local
-host=172.19.0.2
+host=ec2-52-27-135-90.us-west-2.compute.amazonaws.com:3307
 database=computer-database-db-test
 user=admincdb
 password=qwerty1234
+
+#container local
+#host=172.19.0.2
+#database=computer-database-db-test
+#user=admincdb
+#password=qwerty1234
