--- a/src/test/resources/hikari.properties
+++ b/src/test/resources/hikari.properties
@@ -1,12 +1,12 @@
 dataSourceClassName=com.mysql.jdbc.jdbc2.optional.MysqlDataSource
 # local test
-dataSource.url=jdbc:mysql://localhost/computer-database-db-test?zeroDateTimeBehavior=convertToNull&password=cdbtesteur
+#dataSource.url=jdbc:mysql://localhost/computer-database-db-test?zeroDateTimeBehavior=convertToNull&password=cdbtesteur
 
 #container
 #dataSource.url=jdbc:mysql://172.19.0.2/computer-database-db-test?zeroDateTimeBehavior=convertToNull&password=qwerty1234
 
 #cloud test
-#dataSource.url=jdbc:mysql://ec2-52-27-135-90.us-west-2.compute.amazonaws.com:3307/computer-database-db-test?zeroDateTimeBehavior=convertToNull&password=qwerty1234
+dataSource.url=jdbc:mysql://ec2-52-27-135-90.us-west-2.compute.amazonaws.com:3307/computer-database-db-test?zeroDateTimeBehavior=convertToNull&password=qwerty1234
 
 dataSource.user=admincdb
 maximumPoolSize = 2
