--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
 	<groupId>com.excilys.mlemaile.cdb</groupId>
 	<artifactId>ComputerDatabase</artifactId>
-	<version>1.5-RELEASE</version>
+	<version>1.6-SNAPSHOT</version>
 	<name>Computer Database</name>
 	<packaging>war</packaging>
 
@@ -31,6 +31,10 @@
 		<servlet.version>3.0.1</servlet.version>
 		<jspapi.version>2.3.1</jspapi.version>
 		<jstl.version>1.2</jstl.version>
+		
+		<mavenCheckstyle.version>2.17</mavenCheckstyle.version>
+		<maven.surefire.version>2.20</maven.surefire.version>
+		<maven.failsafe.version>2.20</maven.failsafe.version>
 	</properties>
 
 	<dependencies>
@@ -154,9 +158,7 @@
 	<build>
 		<plugins>
 			<plugin>
-				<groupId>orgMost systems will allow you to have a virtual GUI. You mentioned Ubuntu, which is a Debian derivative. There are several tutorials on the Net that tell you how to install Xvfb, most of which are incomplete or wrong. On a Debian you install a headless browser like this:
-
-				.apache.maven.plugins</groupId>
+				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-war-plugin</artifactId>
 				<version>2.6</version>
 				<configuration>
@@ -167,7 +169,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-checkstyle-plugin</artifactId>
-				<version>2.17</version>
+				<version>{mavenCheckstyle.version}</version>
 
 				<goals>
 					<goal>check</goal>
@@ -195,6 +197,71 @@
 					<password>deployer</password>
 				</configuration>
 			</plugin>
+			
+			<!-- Exclude integration tests from testing phase -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>${maven.surefire.version}</version>
+				<configuration>
+					<excludes>
+						<exclude>**/integration/**</exclude>
+					</excludes>
+				</configuration>
+			</plugin>
+
+			<!-- Include integration tests into integration tests phase -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-failsafe-plugin</artifactId>
+				<version>${maven.failsafe.version}</version>
+				<configuration>
+					<includes>
+						<include>**/integration/**</include>
+					</includes>
+				</configuration>
+				<executions>
+					<execution>
+						<id>integration-tests</id>
+						<goals>
+							<goal>integration-test</goal>
+							<goal>verify</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			
+			<!-- Start Tomcat with war during pre-integration tests and shut it down 
+				during post-integration tests -->
+			<plugin>
+				<groupId>org.codehaus.cargo</groupId>
+				<artifactId>cargo-maven2-plugin</artifactId>
+				<version>1.4.16</version>
+				<configuration>
+					<container>
+						<containerId>tomcat8x</containerId>
+						<output>${project.build.directory}/tomcat8x/container.log</output>
+						<append>false</append>
+						<log>${project.build.directory}/tomcat8x/cargo.log</log>
+					</container>
+				</configuration>
+				<executions>
+					<execution>
+						<id>start</id>
+						<phase>pre-integration-test</phase>
+						<goals>
+							<goal>start</goal>
+						</goals>
+					</execution>
+					<execution>
+						<id>stop</id>
+						<phase>post-integration-test</phase>
+						<goals>
+							<goal>stop</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
 		</plugins>
 
 
@@ -205,7 +272,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-checkstyle-plugin</artifactId>
-				<version>2.17</version>
+				<version>{mavenCheckstyle.version}</version>
 				<configuration>
 					<configLocation>checkstyle.xml</configLocation>
 					<suppressionsLocation>suppressions.xml</suppressionsLocation>
