--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,9 @@
 		<mavenCheckstyle.version>2.17</mavenCheckstyle.version>
 		<maven.surefire.version>2.20</maven.surefire.version>
 		<maven.failsafe.version>2.20</maven.failsafe.version>
+		<maven.war.version>2.6</maven.war.version>
+		<maven.tomcat7.version>2.2</maven.tomcat7.version>
+		<cargo.maven2.version>1.4.16</cargo.maven2.version>
 	</properties>
 
 	<dependencies>
@@ -160,7 +163,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-war-plugin</artifactId>
-				<version>2.6</version>
+				<version>${maven.war.version}</version>
 				<configuration>
 					<failOnMissingWebXml>false</failOnMissingWebXml>
 				</configuration>
@@ -189,7 +192,7 @@
 			<plugin>
 				<groupId>org.apache.tomcat.maven</groupId>
 				<artifactId>tomcat7-maven-plugin</artifactId>
-				<version>2.2</version>
+				<version>${maven.tomcat7.version}</version>
 				<configuration>
 					<url>http://172.18.0.3:8080/manager/text</url>
 					<server>Tomcat8Server</server>
@@ -236,7 +239,7 @@
 			<plugin>
 				<groupId>org.codehaus.cargo</groupId>
 				<artifactId>cargo-maven2-plugin</artifactId>
-				<version>1.4.16</version>
+				<version>${cargo.maven2.version}</version>
 				<configuration>
 					<container>
 						<containerId>tomcat8x</containerId>
