--- a/pom.xml
+++ b/pom.xml
@@ -206,8 +206,11 @@
 			<scope>test</scope>
 		</dependency>
 
-
-
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-web</artifactId>
+			<version>${spring-framework.version}</version>
+		</dependency>
 
 	</dependencies>
 
