--- a/pom.xml
+++ b/pom.xml
@@ -192,6 +192,12 @@
 			<artifactId>spring-tx</artifactId>
 			<version>${spring-framework.version}</version>
 		</dependency>
+		
+		<dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-webmvc</artifactId>
+            <version>${spring-framework.version}</version>
+        </dependency>
 
 		<!-- Spring JDBC Support -->
 		<dependency>
@@ -254,8 +260,8 @@
 				<configuration>
 					<url>http://localhost:8080/manager/text</url>
 					<server>Tomcat8Server</server>
-					<username>deployer</username>
-					<password>deployer</password>
+					<username>admin</username>
+					<password>manager</password>
 				</configuration>
 			</plugin>
 
