--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,7 @@
 		<cargo.maven2.version>1.4.16</cargo.maven2.version>
 
 		<spring-framework.version>4.3.7.RELEASE</spring-framework.version>
+		<spring.security.version>4.2.2.RELEASE</spring.security.version>
 
 	</properties>
 
@@ -181,6 +182,27 @@
 				<artifactId>jstl</artifactId>
 				<version>${jstl.version}</version>
 			</dependency>
+
+			<!-- Spring Security -->
+			<dependency>
+				<groupId>org.springframework.security</groupId>
+				<artifactId>spring-security-web</artifactId>
+				<version>${spring.security.version}</version>
+			</dependency>
+
+			<dependency>
+				<groupId>org.springframework.security</groupId>
+				<artifactId>spring-security-config</artifactId>
+				<version>${spring.security.version}</version>
+			</dependency>
+
+			<!-- https://mvnrepository.com/artifact/org.springframework.security/spring-security-taglibs -->
+			<dependency>
+				<groupId>org.springframework.security</groupId>
+				<artifactId>spring-security-taglibs</artifactId>
+				<version>${spring.security.version}</version>
+			</dependency>
+
 
 			<!-- Spring and Transactions -->
 			<dependency>
