Register avant formulaire on Webapp

--- a/ComputerDatabase-webapp/src/main/webapp/WEB-INF/web.xml
+++ b/ComputerDatabase-webapp/src/main/webapp/WEB-INF/web.xml
@@ -53,6 +53,7 @@
     <url-pattern>/addComputer</url-pattern>
     <url-pattern>/logout</url-pattern>
     <url-pattern>/login</url-pattern>
+    <url-pattern>/register</url-pattern>
  </servlet-mapping> 
 
 	<!-- Spring Security -->
