Checkstyle, refacto pour test sur db locale, suppr fichier inutiles

--- a/ComputerDatabase-persistence/src/test/resources/database.properties
+++ b/ComputerDatabase-persistence/src/test/resources/database.properties
@@ -1,19 +1,19 @@
 start-url=jdbc:mysql://
 zeroDateTimeBehavior=convertToNull
 #local db test
-#host=localhost
-#database=computer-database-db-test
-#user=testcdb
-#password=cdbtesteur
-
-#cloud
-host=ec2-52-27-135-90.us-west-2.compute.amazonaws.com:3307
+host=localhost
 database=computer-database-db-test
-user=admincdb
+user=testcdb
 password=qwerty1234
 
-#container local
-#host=172.19.0.2
+#cloud
+#host=ec2-52-27-135-90.us-west-2.compute.amazonaws.com:3307
 #database=computer-database-db-test
 #user=admincdb
 #password=qwerty1234
+
+container local
+host=172.19.0.2
+database=computer-database-db-test
+user=admincdb
+password=qwerty1234
