--- a/ComputerDatabase-persistence/src/test/resources/hikari.properties
+++ b/ComputerDatabase-persistence/src/test/resources/hikari.properties
@@ -1,8 +1,8 @@
 driverClassName=org.mariadb.jdbc.Driver
-jdbcUrl=jdbc:mysql://ec2-52-27-135-90.us-west-2.compute.amazonaws.com:3307/computer-database-db-test?zeroDateTimeBehavior=convertToNull
-usernameDB=admincdb
+jdbcUrl=jdbc:mysql://localhost/computer-database-db-test?zeroDateTimeBehavior=convertToNull
+usernameDB=testcdb
 password=qwerty1234
-maximumPoolSize=60
+maximumPoolSize=2
 maxLifetime=28000
 idleTimeout=28000
 leakDetectionThreshold=4000
