--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
 	<groupId>com.excilys.mlemaile.cdb</groupId>
 	<artifactId>ComputerDatabase</artifactId>
-	<version>2.0-SNAPSHOT</version>
+	<version>2.0-RELEASE</version>
 	<packaging>pom</packaging>
 
 	<name>ComputerDatabase</name>
