--- a/ComputerDatabase-console/pom.xml
+++ b/ComputerDatabase-console/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>com.excilys.mlemaile.cdb</groupId>
 		<artifactId>ComputerDatabase</artifactId>
-		<version>2.0-SNAPSHOT</version>
+		<version>2.1-SNAPSHOT</version>
 	</parent>
 	<artifactId>ComputerDatabase-console</artifactId>
 	<packaging>jar</packaging>
@@ -18,7 +18,7 @@
 	<dependencies>
 		<dependency>
 			<groupId>${project.parent.groupId}</groupId>
-			<artifactId>ComputerDatabase-service</artifactId>
+			<artifactId>ComputerDatabase-core</artifactId>
 			<version>${project.parent.version}</version>
 		</dependency>
 
@@ -26,5 +26,26 @@
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-taglibs</artifactId>
 		</dependency>
+
+		<dependency>
+			<groupId>javax.ws.rs</groupId>
+			<artifactId>javax.ws.rs-api</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.glassfish.jersey.core</groupId>
+			<artifactId>jersey-client</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.glassfish.jersey.media</groupId>
+			<artifactId>jersey-media-json-jackson</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-annotations</artifactId>
+		</dependency>
+
+
+
+
 	</dependencies>
 </project>
