--- a/ComputerDatabase-webapp/pom.xml
+++ b/ComputerDatabase-webapp/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>com.excilys.mlemaile.cdb</groupId>
 		<artifactId>ComputerDatabase</artifactId>
-		<version>2.0-SNAPSHOT</version>
+		<version>2.1-SNAPSHOT</version>
 	</parent>
 	<artifactId>ComputerDatabase-webapp</artifactId>
 	<packaging>war</packaging>
@@ -62,24 +62,28 @@
 			<artifactId>selenium-java</artifactId>
 			<scope>test</scope>
 		</dependency>
-		
-		<!-- Spring Security -->
-	<dependency>
-		<groupId>org.springframework.security</groupId>
-		<artifactId>spring-security-web</artifactId>
-	</dependency>
 
-	<dependency>
-		<groupId>org.springframework.security</groupId>
-		<artifactId>spring-security-config</artifactId>
-	</dependency>
-	
-	<!-- https://mvnrepository.com/artifact/org.springframework.security/spring-security-taglibs -->
-	<dependency>
-		<groupId>org.springframework.security</groupId>
-		<artifactId>spring-security-taglibs</artifactId>
-	</dependency>
-	
+		<!-- Spring Security -->
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-web</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-config</artifactId>
+		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/org.springframework.security/spring-security-taglibs -->
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-taglibs</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+		</dependency>
 
 	</dependencies>
 	<build>
@@ -117,8 +121,8 @@
 				</executions>
 			</plugin>
 
-			<!-- Start Tomcat with war during pre-integration tests and shut it down
-			during post-integration tests -->
+			<!-- Start Tomcat with war during pre-integration tests and shut it down 
+				during post-integration tests -->
 			<plugin>
 				<groupId>org.codehaus.cargo</groupId>
 				<artifactId>cargo-maven2-plugin</artifactId>
