--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,11 @@
 		<spring-framework.version>4.3.7.RELEASE</spring-framework.version>
 		<spring.security.version>4.2.2.RELEASE</spring.security.version>
 
+		<hibernate.validator.version>5.4.1.Final</hibernate.validator.version>
+		
+		<javax.ws.rs>2.1-m07</javax.ws.rs>
+		<jersey.version>2.25.1</jersey.version>
+		<jackson.version>2.9.0.pr3</jackson.version>
 	</properties>
 
 	<dependencyManagement>
@@ -75,16 +80,15 @@
 				<artifactId>jcl-over-slf4j</artifactId>
 				<version>${slf4j.version}</version>
 			</dependency>
-			
+
 			<!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
-			<!-- <dependency>
+			<dependency>
 				<groupId>mysql</groupId>
 				<artifactId>mysql-connector-java</artifactId>
 				<version>${mysql.version}</version>
 				<scope>runtime</scope>
 			</dependency>
-			 -->
-			
+
 			<dependency>
 				<groupId>org.mariadb.jdbc</groupId>
 				<artifactId>mariadb-java-client</artifactId>
@@ -230,11 +234,8 @@
 			</dependency>
 
 			<!-- Spring JDBC Support -->
-			<!-- <dependency>
-				<groupId>org.springframework</groupId>
-				<artifactId>spring-jdbc</artifactId>
-				<version>${spring-framework.version}</version>
-			</dependency> --> <!-- Do we still need it ? -->
+			<!-- <dependency> <groupId>org.springframework</groupId> <artifactId>spring-jdbc</artifactId> 
+				<version>${spring-framework.version}</version> </dependency> --> <!-- Do we still need it ? -->
 
 			<dependency>
 				<groupId>org.springframework</groupId>
@@ -254,8 +255,39 @@
 			<dependency>
 				<groupId>org.hibernate</groupId>
 				<artifactId>hibernate-validator</artifactId>
-				<version>5.4.1.Final</version>
+				<version>${hibernate.validator.version}</version>
 			</dependency>
+
+			<dependency>
+				<groupId>com.fasterxml.jackson.core</groupId>
+				<artifactId>jackson-databind</artifactId>
+				<version>${jackson.version}</version>
+			</dependency>
+
+			<!-- https://mvnrepository.com/artifact/javax.ws.rs/javax.ws.rs-api -->
+			<dependency>
+				<groupId>javax.ws.rs</groupId>
+				<artifactId>javax.ws.rs-api</artifactId>
+				<version>${javax.ws.rs}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.glassfish.jersey.core</groupId>
+				<artifactId>jersey-client</artifactId>
+				<version>${jersey.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.glassfish.jersey.media</groupId>
+				<artifactId>jersey-media-json-jackson</artifactId>
+				<version>${jersey.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.fasterxml.jackson.core</groupId>
+				<artifactId>jackson-annotations</artifactId>
+				<version>${jackson.version}</version>
+			</dependency>
+
+
+
 		</dependencies>
 
 	</dependencyManagement>
